<resources>
    <string name="login_in_progress">Logging in…</string>
    <string name="app_name" translatable="false">Tiny Tiny RSS</string>
    <string name="login_need_configure">Please configure the application first.</string>
    <string name="login_ready">Ready to login.</string>
    <string name="login_login">Log in</string>
    <string name="login">Login</string>
    <string name="debugging">Debugging</string>
    <string name="password">Password</string>
    <string name="default_url">http://example.domain/tt-rss/</string>
    <string name="look_and_feel">Interface</string>
    <string name="pref_theme">Theme</string>
    <string name="ttrss_url">Tiny Tiny RSS URL</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="preferences">Settings</string>
    <string name="connection">Connection</string>
    <string name="http_authentication">HTTP Authentication</string>
    <string name="loading_message">Loading, please wait…</string>
    <string name="unread_only">Unread only</string>
    <string name="share_article">Share article</string>
    <string name="catchup">Mark read</string>
    <string name="sort_feeds_by_unread">Sort feeds by unread count</string>
    <string name="ssl_trust_any">Accept any certificate</string>
    <string name="category_browse_feeds">Browse feeds</string>
    <string name="blank"></string>
    <string name="transport_debugging">Log sent and received data</string>
    <string name="article_toggle_marked">(Un)Star</string>
    <string name="article_toggle_unread">(Un)Read</string>
    <string name="article_toggle_published">(Un)Publish</string>
    <string name="headlines_select">Select articles</string>
    <string name="headlines_select_dialog">Select articles</string>
    <string name="headlines_select_all">Select all</string>
    <string name="headlines_select_unread">Unread</string>
    <string name="headlines_select_none">Deselect all</string>
    <string name="selection_toggle_marked">(Un)Star</string>
    <string name="selection_toggle_published">(Un)Publish</string>
    <string name="selection_toggle_unread">(Un)Read</string>
    <string name="context_selection_toggle_unread">(Un)Read</string>
    <string name="article_mark_read_above">Mark above read</string>
    <string name="http_login_summary">Optional. Fill this if your tt-rss installation is protected by HTTP Basic authentication</string>
    <string name="login_summary">Not needed for single user mode</string>
    <string name="ttrss_url_summary">http://example.org/tt-rss</string>
    <string name="enable_cats">Enable feed categories</string>
    <string name="no_caption_to_display">No caption to display</string>
    <string name="browse_cats_like_feeds">Browse categories like feeds</string>
    <string name="browse_cats_like_feeds_summary">Use category context menu to override this setting</string>
    <string name="headlines_mark_as_read">Mark read</string>
    <string name="error_unknown">Error: Unknown error (see log)</string>
    <string name="error_http_unauthorized">Error: 401 unauthorized</string>
    <string name="error_http_forbidden">Error: 403 forbidden</string>
    <string name="error_http_not_found">Error: 404 not found</string>
    <string name="error_http_server_error">Error: 500 server error</string>
    <string name="error_http_other_error">Error: other HTTP error (see log)</string>
    <string name="error_ssl_rejected">Error: SSL certificate rejected</string>
    <string name="error_parse_error">Error: JSON parse failed</string>
    <string name="error_io_error">Error: I/O failure (server down?)</string>
    <string name="error_other_error">Error: unknown error (see log)</string>
    <string name="error_api_disabled">Error: enable API access in tt-rss settings</string>
    <string name="error_api_unknown">Error: unknown API error (see log)</string>
    <string name="error_api_incorrect_usage">Error: incorrect API usage</string>
    <string name="error_login_failed">Error: username or password incorrect</string>
    <string name="error_invalid_api_url">Error: invalid API URL</string>
    <string name="go_offline">Go offline</string>
    <string name="go_online">Go online</string>
    <string name="offline_switch_failed">Failed to prepare offline mode</string>
    <string name="dialog_offline_prompt">Login failed, but you have stored offline data. Would you like to go offline?</string>
    <string name="dialog_offline_success">Offline mode is ready</string>
    <string name="dialog_offline_go">Go offline</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_offline_switch_prompt">Download unread articles and go offline?</string>
    <string name="notify_downloading_articles">Downloading articles (%1$d)…</string>
    <string name="notify_downloading_init">Starting download…</string>
    <string name="notify_downloading_feeds">Downloading feeds…</string>
    <string name="notify_downloading_categories">Downloading categories…</string>
    <string name="notify_uploading_sending_data">Sending data to server…</string>
    <string name="notify_downloading_title">Preparing offline mode</string>
    <string name="notify_uploading_title">Synchronizing offline data</string>
    <string name="offline_sync_success">Finished synchronizing your offline data</string>
    <string name="offline_mode">Offline mode</string>
    <string name="offline_media_cache_enabled">Cache media</string>
    <string name="offline_media_cache_enabled_summary">Download media files to sdcard. This might significantly increase time it takes to go offline</string>
    <string name="notify_downloading_images">Downloading images (%1$d)…</string>
    <string name="notify_downloading_media">Downloading media files…</string>
    <string name="article_set_labels">Set labels</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="pref_font_size">Text size</string>
    <string name="dialog_close">Close</string>
    <string name="article_link_copy">Copy link to clipboard</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="attachments_prompt">Select attachment</string>
    <string name="attachment_view">View</string>
    <string name="attachment_copy">Copy URL</string>
    <string name="justify_article_text">Justify article text</string>
    <string name="dialog_offline_sync_in_progress">Offline sync in progress</string>
    <string name="dialog_offline_sync_stop">Stop syncing</string>
    <string name="dialog_offline_sync_continue">Continue</string>
    <string name="article_set_note">Publish with note</string>
    <string name="dialog_open_preferences">Settings</string>
    <string name="dialog_need_configure_prompt">Please fill in your tt-rss server information such as URL, login, and password.</string>
    <string name="error_network_unavailable">Error: network unavailable</string>
    <string name="category_browse_headlines">Browse headlines</string>
    <string name="use_volume_keys">Use volume buttons</string>
    <string name="use_volume_keys_long">Switch between articles with hardware volume buttons</string>
    <string name="ssl_trust_any_host">No hostname verification</string>
    <string name="error_api_unknown_method">Error: unknown API method</string>
    <string name="ssl_trust_any_long">Accepts any SSL certificate without validation</string>
    <string name="ssl_trust_any_host_long">Do not verify server hostname</string>
    <string name="ssl">SSL</string>
    <string name="error_ssl_hostname_rejected">Error: SSL hostname not verified</string>
    <plurals name="article_comments">
        <item quantity="one">%1$d comment</item>
        <item quantity="other">%1$d comments</item>
    </plurals>
    <plurals name="trial_mode_prompt">
        <item quantity="one">Trial mode, only one day left.</item>
        <item quantity="other">Trial mode, %1$d days left.</item>
    </plurals>
    <string name="trial_purchase">Unlock full version</string>
    <string name="trial_expired">Trial expired</string>
    <string name="trial_expired_message">To continue using Tiny Tiny RSS please unlock the full version by purchasing the key.</string>
    <string name="reading">Reading</string>
    <string name="offline_articles_to_download">Amount of articles to download</string>
    <string name="offline_articles_to_download_long">How many articles to download for offline mode (newest first)</string>
    <string name="pref_headlines_show_content">Show content preview</string>
    <string name="pref_headlines_mark_read_scroll">Mark read on scroll</string>
    <string name="pref_headline_font_size">Text size</string>
    <string name="fresh_articles">Fresh articles</string>
    <string name="feed_starred_articles">Starred articles</string>
    <string name="feed_all_articles">All articles</string>
    <string name="prefs_enable_fab">Enable FAB</string>
    <string name="prefs_enable_fab_long">Show floating action button when reading</string>
    <string name="prefs_open_fresh_on_startup">Open Fresh articles on startup</string>
    <string name="prefs_headline_display_mode">Display mode</string>
    <string name="prefs_headline_display_mode_long">Default, no images, or compact mode</string>
    <string name="prefs_version_title">Version</string>
    <string name="prefs_build_timestamp_title">Build timestamp</string>
    <string name="prefs_widget_show_fresh">Show Fresh articles</string>
    <string name="prefs_widget_show_fresh_summary">Instead of total unread display amount of Fresh articles</string>
    <string name="prefs_widget">Widget</string>
    <string name="prefs_custom_tabs_summary">Open external links with browser custom tabs (faster, used if available)</string>
    <string name="prefs_use_custom_tabs">Use quick preview</string>
    <string name="prefs_always_open_uri">Always open in browser</string>
    <string name="prefs_always_open_uri_summary">Open articles directly in your web browser, instead of going to the detail view</string>
    <string name="ask_me_every_time">Ask me every time</string>
    <string name="prefs_opening_links">Opening links</string>
    <string name="pref_headlines_swipe_to_dismiss">Swipe to dismiss</string>
    <string name="pref_headlines_swipe_to_dismiss_long">Disables headlines context menu</string>
    <string name="pref_widget_update_interval">Update interval (in minutes)</string>
    <string name="pref_widget_background">Widget theme</string>
    <string name="pref_widget_update_interval_summary">This interval is imprecise due to Android limitations</string>
    <string name="prefs_offline_sort_by_feed">Group headlines by feeds</string>
    <string name="prefs_network_settings">More settings...</string>
    <string name="logcat_title">Log viewer</string>
    <string name="prefs_headline_request_size">How many headlines to request</string>
    <string name="prefs_headline_request_size_long">Use lower values on slow connections</string>
    <string name="headlines">Headlines</string>
    <string name="prefs_headline_images_wifi_only">Show images on Wi-Fi only</string>
    <string name="prefs_headline_images_wifi_only_long">Overrides previous setting</string>
    <string name="prefs_inline_video_player">Experimental. Long tap to open separate player</string>
    <string name="prefs_enable_image_downsampling">Auto-resize images</string>
    <string name="prefs_enable_image_downsampling_long">Asks backend to downsample images if not on Wi-Fi. Needs a plugin (ttrss-api-resize)</string>
    <string name="prefs_always_downsample_images">Always resize images</string>
    <string name="prefs_always_downsample_images_long">Even on Wi-Fi</string>
    <string name="prefs_inline_video_player_title">Inline video player</string>
    <string name="force_phone_layout_summary">On tablet devices</string>
    <string name="force_phone_layout">Force phone layout</string>
</resources>