<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/connection" >
        <EditTextPreference
            android:key="login"
            android:singleLine="true"
            android:summary="@string/login_summary"
            android:title="@string/login" >
        </EditTextPreference>
        <EditTextPreference
            android:key="password"
            android:password="true"
            android:singleLine="true"
            android:title="@string/password" >
        </EditTextPreference>
        <EditTextPreference
            android:hint="@string/default_url"
            android:inputType="textUri"
            android:key="ttrss_url"
            android:singleLine="true"
            android:summary="@string/ttrss_url_summary"
            android:title="@string/ttrss_url" >
        </EditTextPreference>

        <Preference
            android:key="network_settings"
            android:title="@string/prefs_network_settings" />

    </PreferenceCategory>
    <PreferenceCategory
        android:key="category_look_and_feel"
        android:title="@string/look_and_feel" >
        <ListPreference
            android:defaultValue="THEME_FOLLOW_DEVICE"
            android:entries="@array/pref_theme_names"
            android:entryValues="@array/pref_theme_values"
            android:key="theme"
            android:title="@string/pref_theme" />

        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:key="sort_feeds_by_unread"
            android:title="@string/sort_feeds_by_unread" />
        <!-- <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:key="download_feed_icons"
            android:title="@string/download_feed_icons" /> -->
        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:key="enable_cats"
            android:title="@string/enable_cats" />

        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:dependency="enable_cats"
            android:key="browse_cats_like_feeds"
            android:summary="@string/browse_cats_like_feeds_summary"
            android:title="@string/browse_cats_like_feeds" />

        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="true"
            android:key="open_fresh_on_startup"
            android:title="@string/prefs_open_fresh_on_startup" />

        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:key="force_phone_layout"
            android:summary="@string/force_phone_layout_summary"
            android:title="@string/force_phone_layout" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_headlines"
        android:title="@string/headlines" >

        <org.fox.ttrss.util.FontSizeDialogPreference
            android:defaultValue="13"
            android:key="headlines_font_size_sp"
            android:dialogMessage="@string/pref_headline_font_size"
            android:title="@string/pref_headline_font_size" />

        <ListPreference
            android:defaultValue="HL_DEFAULT"
            android:entries="@array/headline_mode_names"
            android:entryValues="@array/headline_mode_values"
            android:key="headline_mode"
            android:summary="@string/prefs_headline_display_mode_long"
            android:title="@string/prefs_headline_display_mode" />

        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:key="headline_images_wifi_only"
            android:summary="@string/prefs_headline_images_wifi_only_long"
            android:title="@string/prefs_headline_images_wifi_only" />

        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="true"
            android:key="headlines_show_content"
            android:title="@string/pref_headlines_show_content" />

        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="headlines_mark_read_scroll"
            android:title="@string/pref_headlines_mark_read_scroll" />

        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="true"
            android:dependency="headlines_mark_read_scroll"
            android:key="headlines_swipe_to_dismiss"
            android:summary="@string/pref_headlines_swipe_to_dismiss_long"
            android:title="@string/pref_headlines_swipe_to_dismiss" />

        <!-- <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:key="enable_condensed_fonts"
            android:summary="@string/pref_headlines_use_condensed_fonts_long"
            android:title="@string/pref_headlines_use_condensed_fonts" /> -->

        <ListPreference
            android:defaultValue="15"
            android:entries="@array/pref_headlines_request_values"
            android:entryValues="@array/pref_headlines_request_values"
            android:key="headlines_request_size"
            android:summary="@string/prefs_headline_request_size_long"
            android:title="@string/prefs_headline_request_size" />

        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:key="enable_image_downsampling"
            android:title="@string/prefs_enable_image_downsampling"
            android:summary="@string/prefs_enable_image_downsampling_long" />

        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:key="always_downsample_images"
            android:dependency="enable_image_downsampling"
            android:title="@string/prefs_always_downsample_images"
            android:summary="@string/prefs_always_downsample_images_long" />

        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:key="inline_video_player"
            android:summary="@string/prefs_inline_video_player"
            android:title="@string/prefs_inline_video_player_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/reading" >
        <org.fox.ttrss.util.FontSizeDialogPreference
            android:defaultValue="16"
            android:key="article_font_size_sp"
            android:inputType="number"
            android:title="@string/pref_font_size" />
        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="true"
            android:key="justify_article_text"
            android:title="@string/justify_article_text" />
        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:key="use_volume_keys"
            android:summary="@string/use_volume_keys_long"
            android:title="@string/use_volume_keys" />
        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="true"
            android:key="enable_article_fab"
            android:summary="@string/prefs_enable_fab_long"
            android:title="@string/prefs_enable_fab" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_opening_links" >
        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="true"
            android:key="enable_custom_tabs"
            android:summary="@string/prefs_custom_tabs_summary"
            android:title="@string/prefs_use_custom_tabs" />
        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="true"
            android:key="custom_tabs_ask_always"
            android:title="@string/ask_me_every_time" />
        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:key="always_open_uri"
            android:summary="@string/prefs_always_open_uri_summary"
            android:title="@string/prefs_always_open_uri" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/offline_mode" >
        <ListPreference
            android:defaultValue="250"
            android:entries="@array/pref_offline_amounts"
            android:entryValues="@array/pref_offline_amounts"
            android:key="offline_sync_max"
            android:summary="@string/offline_articles_to_download_long"
            android:title="@string/offline_articles_to_download" />

        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:key="offline_sort_by_feed"
            android:title="@string/prefs_offline_sort_by_feed" />

        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:key="offline_image_cache_enabled"
            android:summary="@string/offline_media_cache_enabled_summary"
            android:title="@string/offline_media_cache_enabled" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_widget" >
        <ListPreference
            android:defaultValue="15"
            android:entries="@array/pref_widget_update_intervals"
            android:entryValues="@array/pref_widget_update_intervals"
            android:key="widget_update_interval"
            android:summary="@string/pref_widget_update_interval_summary"
            android:title="@string/pref_widget_update_interval" />

        <ListPreference
            android:defaultValue="WB_LIGHT"
            android:entries="@array/pref_widget_bgs"
            android:entryValues="@array/pref_widget_bgs_values"
            android:key="widget_background"
            android:title="@string/pref_widget_background" />

        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="true"
            android:key="widget_show_fresh"
            android:title="@string/prefs_widget_show_fresh"
            android:summary="@string/prefs_widget_show_fresh_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/debugging" >

        <Preference
            android:key="show_logcat"
            android:title="@string/logcat_title" />

        <org.fox.ttrss.util.LessBrokenSwitchPreference
            android:defaultValue="false"
            android:key="transport_debugging"
            android:title="@string/transport_debugging" />
    </PreferenceCategory>

    <Preference
        android:key="version"
        android:enabled="false"
        android:title="@string/prefs_version_title" />

    <Preference
        android:key="build_timestamp"
        android:enabled="false"
        android:title="@string/prefs_build_timestamp_title" />
</PreferenceScreen>
